# pydantic2-settings-sterces

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/actions/test/: action.yml
.github/workflows/: test.yml  update-deps.yml
attic/.github/workflows/: release.yml  test.yml
attic/pydantic2_settings_sterces/: __init__.py
pydantic2_settings_sterces/: __init__.py  kpsettings.py
pydantic2_settings_vault/: __init__.py
scripts/: version.sh
test/: settings.py  test_settings.py
tests/: conftest.py  settings.py  test_settings.py
