[project]
name = "pydantic2-settings-sterces"
version = "0.1.0"
description = "A Pydantic v2 settings extension for secure configuration management using a KeePass database file."
authors = [{name = "Quien Sabe", email = "qs5779@mail.com"}]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic-settings>=2.6.0",
]
license = { text = "MIT" }
keywords = ["pydantic", "settings", "keepass", "configuration", "security", "secrets management", "python", "opensource"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
homepage = "https://github.com/wtfo-guru/pydantic2-settings-sterces"
# documentation = "https://github.com/wtfo-guru/pydantic2-settings-sterces"
repository = "https://github.com/wtfo-guru/pydantic2-settings-sterces"
changelog = "https://github.com/wtfo-guru/pydantic2-settings-sterces/blob/main/CHANGELOG.md"


[tool.poetry]
packages = [{include = "pydantic2_settings_sterces"}]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.15.0"
wemake-python-styleguide = "^1.1.0"
flake8-pytest-style = "^2.1.0"
doc8 = "^1.1.2"
docutils = "^0.21.2"
nitpick = "^0.35.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
isort = "^6.0.1"
black = "^25.1.0"
darglint = "^1.8.1"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
sphinx-autodoc-typehints = "^3.0"
tomli = "^2.2.1"
sphinx-mdinclude = "^0.6.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://www.wtfo-guru.com/.well-known/nitpick-wtf-style.toml"
